--- a/index.html
+++ b/index.html
@@ -286,9 +286,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/basket.jpg" class="img-fluid" alt="">
+              <img src="basket.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/basket.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Basketball"><i class="bx bx-plus"></i></a>
+                <a href="basket.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Basketball"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -296,9 +296,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/VideoGames.jpg" class="img-fluid" alt="">
+              <img src="VideoGames.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/VideoGames.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Video Games"><i class="bx bx-plus"></i></a>
+                <a href="VideoGames.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Video Games"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -306,9 +306,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Disney.jpg" class="img-fluid" alt="">
+              <img src="Disney.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/Disney.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Disney World"><i class="bx bx-plus"></i></a>
+                <a href="Disney.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Disney World"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -316,9 +316,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Pizza.jpg" class="img-fluid" alt="">
+              <img src="Pizza.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/Pizza.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pizza"><i class="bx bx-plus"></i></a>
+                <a href="Pizza.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pizza"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -326,9 +326,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Books.jpg" class="img-fluid" alt="">
+              <img src="Books.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/Books.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Books"><i class="bx bx-plus"></i></a>
+                <a href="Books.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Books"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -336,9 +336,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/NewYork.jpg" class="img-fluid" alt="">
+              <img src="NewYork.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/NewYork.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="New York"><i class="bx bx-plus"></i></a>
+                <a href="NewYork.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="New York"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -436,18 +436,18 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/purecounter/purecounter.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/typed.js/typed.min.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="aos.js"></script>
+  <script src="bootstrap.bundle.min.js"></script>
+  <script src="glightbox.min.js"></script>
+  <script src="isotope.pkgd.min.js"></script>
+  <script src="validate.js"></script>
+  <script src="purecounter.js"></script>
+  <script src="swiper-bundle.min.js"></script>
+  <script src="typed.min.js"></script>
+  <script src="noframework.waypoints.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="main.js"></script>
 
 </body>
 
