--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About Me And My Achievements</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Lists Of My Favorite Things</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact And Thank You Note</span></a></li>
+          <li><a href="#hero" class="nav-link scrollto active"><span>Home</span></a></li>
+          <li><a href="#about" class="nav-link scrollto"><span>About Me And My Achievements</span></a></li>
+          <li><a href="#portfolio" class="nav-link scrollto"></i><span>Portfolio</span></a></li>
+          <li><a href="#services" class="nav-link scrollto"></i> <span>Lists Of My Favorite Things</span></a></li>
+          <li><a href="#contact" class="nav-link scrollto"></i> <span>Contact And Thank You Note</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -132,7 +132,6 @@
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
-              <i class="bi bi-people"></i>
               <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Family Members</strong> (Excluding pets)</p>
             </div>
@@ -140,7 +139,6 @@
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
-              <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>The grade</strong> I will be going to</p>
             </div>
